# docs/swagger.json
@@ -40,12 +40,45 @@
                 }
             }
         },
+        "/api/v1/user": {
+            "post": {
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "添加用户",
+                "parameters": [
+                    {
+                        "description": "user",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.User"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/app.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/app.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/auth": {
             "get": {
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Get Auth",
+                "summary": "获取认证信息",
                 "parameters": [
                     {
                         "type": "string",
@@ -90,6 +123,63 @@
                     "type": "object"
                 },
                 "msg": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.User": {
+            "type": "object",
+            "properties": {
+                "avatar_src": {
+                    "description": "头像地址",
+                    "type": "string"
+                },
+                "company": {
+                    "description": "公司",
+                    "type": "string"
+                },
+                "created_on": {
+                    "type": "integer"
+                },
+                "deleted_on": {
+                    "type": "integer"
+                },
+                "description": {
+                    "description": "描述",
+                    "type": "string"
+                },
+                "email": {
+                    "description": "电子邮件",
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "modified_on": {
+                    "type": "integer"
+                },
+                "name": {
+                    "description": "昵称",
+                    "type": "string"
+                },
+                "password": {
+                    "description": "密码",
+                    "type": "string"
+                },
+                "position": {
+                    "description": "职位",
+                    "type": "string"
+                },
+                "sex": {
+                    "description": "性别",
+                    "type": "integer"
+                },
+                "username": {
+                    "description": "用户名",
+                    "type": "string"
+                },
+                "web_site": {
+                    "description": "网站",
                     "type": "string"
                 }
             }
